k8s/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      imagePullSecrets:
        - name: acr-creds
      containers:
        - name: service-b
          image: hwacryakir.azurecr.io/service-b:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002

          readinessProbe:
            httpGet:
              path: /
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 20
