k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /service-a(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80

          - path: /service-b(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
